--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ tower = "0.4.13"
 serde = { version = "1.0.163", features = ["derive"] }
 serde_json = "1.0.96"
 rand = "0.8.5"
+tracing = "0.1.37"
+tracing-subscriber = "0.3.17"
